--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@ h1{
    color:lightblue;
    font-size: 60px;
    color:black;
-   text-align: center;
+   overflow:hidden;
    padding-left: 50px;
 }
+
 .row div{
 background-image: url("../img/cssbackground-33.png");
 
@@ -219,4 +220,25 @@ text-align: center;
   position: relative;
   top: 18px;
   left: 10px;
+  
 }
+.left_t{
+  
+  height: 450px;
+  padding: 220px 0;
+  text-align: center;
+}
+.right_t{
+  
+  max-height: 450px;
+  
+}
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+} 
